# datarules

./: CHANGES.md  README.md  example_checks.py  example_modifier.py  modifier.py  pyproject.toml  rule.py  testje.py  validator.py
datarules/: __init__.py  check.py  collector.py  context.py  correction.py  decorators.py  eval_utils.py  lists.py  loader.py  primitives.py  report.py  rewriter.py  rule.py  runner.py  utilities.py
datarules/expression/: __init__.py  column.py  expressionchecker.py  expressioncollector.py  expressionrewriter.py
examples/: example.py
examples/rules/: checks.py  checks.yaml  corrections.py  corrections.yaml
pymodify/: __init__.py  check.py  correction.py  decorators.py  loader.py  primitives.py  report.py  rewriter.py  rule.py  runner.py  validator.py
tests/: test_checks.py  test_corrections.py  test_utilities.py
