[build-system]
requires = ["setuptools>=40.6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "datarules"
version = "0.1.0"
authors = [
    {name = "lverweijen", email = "lauwerund@gmail.com"}
]
description = "Rules for validating and correcting datasets"
readme = "README.md"
requires-python = ">= 3.10"
keywords = [
    "rules",
    "validation",
    "checks",
    "correction",
    "data-editing",
    "data-cleaning",
    "data-cleansing",
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
    "pandas >= 1.5.0",
]
license = {text = "Apache License 2.0"}

[project.optional-dependencies]
extras = [
    "pyaml"
]

[project.urls]
Homepage = "https://github.com/lverweijen/datarules"
Repository = "https://github.com/lverweijen/datarules"
Issues = "https://github.com/lverweijen/datarules/issues"
Changelog = "https://github.com/lverweijen/datarules/blob/main/changes.md"

[tool.setuptools.packages.find]
include = ["datarules*"]
